[gd_scene load_steps=14 format=3 uid="uid://dwhtby81ylt3s"]

[ext_resource type="Theme" uid="uid://deiietf7bytje" path="res://ui/components/left_menu/left_menu_button.tres" id="1_vs06l"]
[ext_resource type="Script" path="res://ui/components/left_menu/left_menu.gd" id="1_yja75"]
[ext_resource type="Texture2D" uid="uid://b3cf3lw2nhpjs" path="res://assets/images/close.svg" id="2_ahqh1"]
[ext_resource type="Texture2D" uid="uid://blq6pvspmkcbj" path="res://assets/images/prev.svg" id="3_3lhq3"]
[ext_resource type="Texture2D" uid="uid://djtv7qiy8hkat" path="res://assets/images/dashboard-3-line.svg" id="3_rgc2b"]
[ext_resource type="Texture2D" uid="uid://srldhyvbmy57" path="res://assets/images/settings-4-line.svg" id="4_cr7m3"]
[ext_resource type="Texture2D" uid="uid://drsftlr0wcb3m" path="res://assets/images/chain.svg" id="4_v0or6"]
[ext_resource type="Texture2D" uid="uid://c5ddyq86urmmy" path="res://assets/images/next.svg" id="7_k0tsh"]
[ext_resource type="Script" path="res://ui/components/left_menu/Quotes.gd" id="7_kx1k8"]
[ext_resource type="PackedScene" uid="uid://b5wmjp1psgsvr" path="res://ui/components/fast_withdraw/fast_withdraw.tscn" id="10_kuvno"]
[ext_resource type="FontFile" uid="uid://ciu7chyqqs4k7" path="res://assets/fonts/Saira_Expanded-Bold.ttf" id="11_6qy05"]
[ext_resource type="FontFile" uid="uid://dgxbgdcr3s84u" path="res://assets/fonts/Saira_Expanded-Regular.ttf" id="12_nwgc3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8gs8"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="Menu" type="PanelContainer"]
clip_contents = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_c8gs8")
script = ExtResource("1_yja75")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 8

[node name="SettingsButton" type="Button" parent="MarginContainer/HBox"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_vs06l")
toggle_mode = true
icon = ExtResource("4_cr7m3")
alignment = 0

[node name="FastWithdrawButton" type="Button" parent="MarginContainer/HBox"]
layout_mode = 2
text = "Fast Withdraw"
icon = ExtResource("4_v0or6")

[node name="DashboardButton" type="Button" parent="MarginContainer/HBox"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("1_vs06l")
toggle_mode = true
button_pressed = true
text = "DASHBOARD"
icon = ExtResource("3_rgc2b")
alignment = 0

[node name="PrevButton" type="Button" parent="MarginContainer/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_3lhq3")
flat = true

[node name="Spacer" type="Control" parent="MarginContainer/HBox"]
visible = false
custom_minimum_size = Vector2(10, 50)
layout_mode = 2

[node name="PlaygroundButton" type="Button" parent="MarginContainer/HBox"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("1_vs06l")
toggle_mode = true
text = "PLAYGROUND"
alignment = 0

[node name="Quotes" type="Label" parent="MarginContainer/HBox"]
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "\"Used to the conditions of a capitalistic environment, the average American takes it for granted that every year business makes something new and better accessible to him. Looking backward upon the years of his own life, he realizes that many implements that were totally unknown in the days of his youth and many others which at that time could be enjoyed only by a small minority are now standard equipment of almost every household.\"
--Ludwig von Mises"
horizontal_alignment = 2
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="MarginContainer/HBox"]
visible = false
custom_minimum_size = Vector2(10, 50)
layout_mode = 2

[node name="Spacer3" type="Control" parent="MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="MarginContainer/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("7_k0tsh")
flat = true

[node name="CloseButton" type="Button" parent="MarginContainer/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_ahqh1")
flat = true

[node name="QuotesButton" type="Button" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
text = "Q"
icon_alignment = 1

[node name="FastWithdrawWindow" type="Window" parent="."]
title = "Fast Withdrawal"
initial_position = 2
size = Vector2i(800, 500)
visible = false
wrap_controls = true
transient = true
exclusive = true
unresizable = true
content_scale_mode = 1
content_scale_aspect = 4

[node name="FastWithdraw" parent="FastWithdrawWindow" instance=ExtResource("10_kuvno")]

[node name="QuotesDialog" type="AcceptDialog" parent="."]
title = "QUOTES"
initial_position = 2
size = Vector2i(512, 384)
unresizable = true
content_scale_mode = 1
content_scale_aspect = 4
ok_button_text = "CLOSE"

[node name="Box" type="VBoxContainer" parent="QuotesDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="QuotesDialog/Box"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="QuotesDialog/Box/Header"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_3lhq3")
flat = true

[node name="Author" type="Label" parent="QuotesDialog/Box/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("11_6qy05")
theme_override_font_sizes/font_size = 28
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="QuotesDialog/Box/Header"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("7_k0tsh")
flat = true

[node name="Margin" type="ColorRect" parent="QuotesDialog/Box"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="Quotes" type="Label" parent="QuotesDialog/Box" node_paths=PackedStringArray("author_label")]
custom_minimum_size = Vector2(496, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("12_nwgc3")
theme_override_font_sizes/font_size = 16
text = "Quote"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("7_kx1k8")
author_label = NodePath("../Header/Author")

[connection signal="toggled" from="MarginContainer/HBox/SettingsButton" to="." method="_on_left_menu_button_toggled" binds= [1]]
[connection signal="pressed" from="MarginContainer/HBox/FastWithdrawButton" to="." method="_on_fast_withdraw_button_pressed"]
[connection signal="toggled" from="MarginContainer/HBox/DashboardButton" to="." method="_on_left_menu_button_toggled" binds= [0]]
[connection signal="pressed" from="MarginContainer/HBox/PrevButton" to="MarginContainer/HBox/Quotes" method="_on_prev_button_pressed"]
[connection signal="toggled" from="MarginContainer/HBox/PlaygroundButton" to="." method="_on_left_menu_button_toggled" binds= [1]]
[connection signal="pressed" from="MarginContainer/HBox/NextButton" to="MarginContainer/HBox/Quotes" method="_on_next_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="close_requested" from="FastWithdrawWindow" to="." method="_on_fast_withdraw_window_close_requested"]
[connection signal="pressed" from="QuotesDialog/Box/Header/PrevButton" to="QuotesDialog/Box/Quotes" method="_on_prev_button_pressed"]
[connection signal="pressed" from="QuotesDialog/Box/Header/NextButton" to="QuotesDialog/Box/Quotes" method="_on_next_button_pressed"]
